tests/semantica/invalid/operador/test1.ctds
program
	{
		integer x = true == 1;
	}